fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header h1, header h2{
   border-style: solid; 
   border-width: 0.15em; 
   background-color: rgb(155, 175, 191);
+  overflow: scroll; 
 }
 #grid-container section {
   text-align: center;
